# 3d-map-path-app-backend

./: README.md  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
deployment/: README.md  docker-compose-local.yml  docker-compose.yml
deployment/docker/django/: Dockerfile  entrypoint.sh
deployment/docker/nginx/: Dockerfile  nginx.conf
deployment/docker/postgres/: Dockerfile
deployment/ecr/: create_image.sh
deployment/envs/local/: .django  .metabase  .postgres  .rabbitmq
project/: db.sqlite3
project/location/: models.py  serializers.py  views.py
project/location/migrations/: 0001_initial.py  0002_alter_location_activity.py
project/project/: settings.py  urls.py
project/user/: models.py  serializers.py  views.py
project/user/migrations/: 0001_initial.py
www/: manage.py  rebuild_translations.sh  sanity_checks.sh
www/api/: pagination.py  urls.py
www/api/v2/: urls.py
www/api/v2/client/: serializers.py  urls.py  views.py
www/config/: asgi.py  celery.py  urls.py  wsgi.py
www/config/settings/: base.py  dev.py  prod.py
www/core/: apps.py
www/core/admin/: __init__.py  forms.py  models.py
www/core/migrations/: 0001_initial.py  0002_alter_datainstance_activity.py
www/core/models/: __init__.py  data_instance.py  data_set.py  event.py  excel.py  image.py  interest.py  profile.py  user.py
www/core/signals/: __init__.py  excel.py
www/core/tasks/: __init__.py
www/core/tasks/one_off/: __init__.py
www/external_api/: __init__.py  google_route.py
www/locale/ru/LC_MESSAGES/: django.po
